Keepalive config option

--- a/configs/read-write.yaml
+++ b/configs/read-write.yaml
@@ -5,6 +5,7 @@ read_range_max: 100
 # read_sparse: false
 # tls_no_verify: false
 # random_data: false
+# disable_keepalive: false
 
 read:
   - name: job1
