--- a/configs/reads.yaml
+++ b/configs/reads.yaml
@@ -4,6 +4,7 @@ bucket: s4_test
 read_range_max: 100
 # read_sparse: false
 # tls_no_verify: false
+# disable_keepalive: false
 
 read:
   - name: job1
